syntax = "proto3";

package greeterservice;

service GreeterService {
  // unary call
  rpc SayHello(HelloRequest) returns (HelloResponse);
  // server streaming call
  rpc SayRepeatHello(RepeatHelloRequest) returns (stream RepeatHelloResponse);
}

message HelloRequest {
  string name = 1;
}


message HelloResponse {
  string message = 1;
}

message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}

message RepeatHelloResponse {
  string message = 1;
}
